# AoC2022

./: .gitignore  Cargo.toml  README.md  get-input.sh  rust-toolchain.toml
.github/workflows/: rust.yml
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs
src/etc/: bitvec.rs  graph.rs  heap_array.rs  mod.rs  point.rs  solution.rs
