[package]
    edition="2021"
    name   ="advent_of_code"
    version="0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    derive_more   ="0.99.17"
    lazy_static   ="1.4.0"
    mimalloc      ="0.1.36"
    num-traits    ="0.2.15"
    priority-queue="1.3.1"
    regex         ="1.7.3"

[profile.release]
    debug=true
    lto  =true
